<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:id="@+id/layoutFragmentSecond"
    android:layout_margin="50dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/txtPalletID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pallet_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPalletID"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/txtPalletID"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRescan"
        android:layout_width="@dimen/width_148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_rescan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPalletID"
        />

    <Button
        android:id="@+id/btnSetRWave"
        android:layout_width="@dimen/width_148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_set_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPalletID"
        />
    <Button
        android:id="@+id/btnSetPalletID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_pallet_id"
        app:layout_constraintTop_toBottomOf="@+id/btnSetRWave"
        />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="@dimen/width_148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSetPalletID"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="@dimen/width_148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSetPalletID"
        />
</androidx.constraintlayout.widget.ConstraintLayout>