<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.fragment.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myapplication.fragment.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ThreeFragment"
            app:destination="@+id/ThreeFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/ThreeFragment"
        android:name="com.example.myapplication.fragment.ThreeFragment"
        android:label="@string/three_fragment_label"
        tools:layout="@layout/fragment_three">

        <action
            android:id="@+id/action_ThreeFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
</navigation>