<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/margin_50dp"
    tools:context=".fragment.ThreeFragment"
    android:id="@+id/layoutFragmentThree">

    <TextView
        android:id="@+id/txtPalletID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pallet_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        />
    <EditText
        android:id="@+id/etPalletID"
        android:layout_width="@dimen/width_188dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txtPalletID"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:inputType="number"
        />
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/etPalletID"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        />
    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_enter"
        app:layout_constraintTop_toBottomOf="@id/etPalletID"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>