<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtScanArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/txt_scan_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/margin_16dp"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        app:layout_constraintStart_toEndOf="@+id/txtScanArea"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/width_178dp"
        android:layout_marginLeft="@dimen/margin_50dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@color/gray"
        android:stepSize="0.5"
        app:labelBehavior="gone"
        />
    <TextView
        android:id="@+id/txtNarrow"
        android:text="Narrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        app:layout_constraintEnd_toStartOf="@+id/slider"
        />
    <TextView
        android:id="@+id/txtWide"
        android:text="Wide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        app:layout_constraintStart_toEndOf="@+id/slider"
        />
    <Button
        android:id="@+id/btnBack"
        android:text="@string/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNarrow"
        />
    <Button
        android:id="@+id/btnSet"
        android:text="@string/btn_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNarrow"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>